--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-    "name": "emotion-box-sizing-reset",
-    "version": "0.1.1",
-    "description": "Eric box-sizing's reset for Emotion CSS-in-JS library.",
-    "main": "dist/index.js",
-    "scripts": {
-        "build": "npx babel src --out-dir dist",
-        "prepublishOnly": "npx babel src --out-dir dist",
-        "lint": "npx eslint --fix --cache src"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/leny/emotion-box-sizing-reset.git"
-    },
-    "files": [
-        "dist"
-    ],
-    "keywords": [
-        "emotion",
-        "reset",
-        "box-sizing"
-    ],
-    "author": "leny <info@flatland.be>",
-    "license": "UNLICENSED",
-    "bugs": {
-        "url": "https://github.com/leny/emotion-box-sizing-reset/issues"
-    },
-    "homepage": "https://github.com/leny/emotion-box-sizing-reset#readme",
-    "lint-staged": {
-        "*.js": [
-            "npx eslint --fix --cache",
-            "git add"
-        ]
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npx lint-staged"
-        }
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.3.3",
-        "@babel/preset-env": "^7.3.1",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.14.1",
-        "eslint-plugin-prettier": "^3.0.1",
-        "husky": "^1.3.1",
-        "lint-staged": "^8.1.4",
-        "prettier": "^1.16.4"
-    },
-    "peerDependencies": {
-        "emotion": ">=10.0.0"
+  "name": "emotion-box-sizing-reset",
+  "version": "0.1.1",
+  "description": "Eric box-sizing's reset for Emotion CSS-in-JS library.",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "scripts": {
+    "build:cjs": "npx babel src --env-name cjs --out-dir dist/cjs",
+    "build:esm": "npx babel src --env-name esm --out-dir dist/esm",
+    "build": "npm run build:cjs && npm run build:esm",
+    "prepublishOnly": "npm run build",
+    "lint": "npx eslint --fix --cache src"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leny/emotion-box-sizing-reset.git"
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "emotion",
+    "reset",
+    "box-sizing"
+  ],
+  "author": "leny <info@flatland.be>",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/leny/emotion-box-sizing-reset/issues"
+  },
+  "homepage": "https://github.com/leny/emotion-box-sizing-reset#readme",
+  "lint-staged": {
+    "*.js": [
+      "npx eslint --fix --cache",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
     }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.14.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
+    "prettier": "^1.16.4"
+  },
+  "peerDependencies": {
+    "emotion": ">=10.0.0"
+  }
 }
