--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Eric box-sizing's reset for Emotion CSS-in-JS library.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "build:cjs": "npx babel src --env-name cjs --out-dir dist/cjs",
     "build:esm": "npx babel src --env-name esm --out-dir dist/esm",
@@ -15,14 +16,8 @@
     "type": "git",
     "url": "git+https://github.com/leny/emotion-box-sizing-reset.git"
   },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "emotion",
-    "reset",
-    "box-sizing"
-  ],
+  "files": ["dist"],
+  "keywords": ["emotion", "reset", "box-sizing"],
   "author": "leny <info@flatland.be>",
   "license": "UNLICENSED",
   "bugs": {
@@ -30,10 +25,7 @@
   },
   "homepage": "https://github.com/leny/emotion-box-sizing-reset#readme",
   "lint-staged": {
-    "*.js": [
-      "npx eslint --fix --cache",
-      "git add"
-    ]
+    "*.js": ["npx eslint --fix --cache", "git add"]
   },
   "husky": {
     "hooks": {
@@ -44,6 +36,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "@emotion/react": "^11.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.4.0",
     "eslint-plugin-prettier": "^3.0.1",
@@ -52,6 +45,7 @@
     "prettier": "^2.0.4"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.0.0",
     "emotion": ">=10.0.0"
   }
 }
